--- a/preamble.tex
+++ b/preamble.tex
@@ -151,6 +151,7 @@ vlined]{algorithm2e}
 \newcommand{\N}{\mathcal{N}}
 \newcommand{\M}{\mathcal{M}}
 \renewcommand{\O}{\mathcal{O}}
+\renewcommand{\L}{\mathcal{L}}
 \newcommand{\Z}{\mathcal{Z}}
 
 % newly-defined commands
