--- a/aip.tex
+++ b/aip.tex
@@ -771,7 +771,7 @@ This motivates the following definition.
    On the other hand, since $\lambda^{-1}\vv{u} \in \N$, we have $\lambda^{-1}\vv{u} \ge \matA\vv{s}$ for some $\vv{s} \geq \vv{0}$ with $\norm{\vv{s}} = 1$.
    Multiplying by $\lambda$, we see that  $\lambda\vv{s}$ is feasible for $\LP$, and so the value of $\LP$ is at least $\lambda$.
 
-   To conclude the proof, note that if $\lambda$ is as above, then the fact that $\lambda^{-1}\vv{u}$ lies in $\N$ implies that $\iprod{\vv{c}}{\vv{u}} \ge \lambda$ for every point $\vv{c}$ defining a standard face in $\N$.
+   To conclude the proof, note that because $\lambda^{-1}\vv{u}$ lies in $\N$ we have $\iprod{\vv{c}}{\vv{u}} \ge \lambda$ for every point $\vv{c}$ defining a standard face in $\N$.
    This shows that the minimum described in \ref{min} is at least $\lambda$, while \ref{new ip} shows that this minimum is at most $\lambda$.
 \end{proof}
 
