--- a/aip.tex
+++ b/aip.tex
@@ -23,7 +23,6 @@ TO DO LIST:
  \item[$\Box$] Complete the sketched proof of \Cref{value-of-aip-invariant-under-collapse: C}.
  \item[$\Box$] Complete proof of updated \Cref{collapse of Newton polyhedron: P} 
  \item[$\Box$] Prove \Cref{finite-set-small-crits: P}. 
- \item[$\Box$] Explicitly describe a finite set $\mathsf{W}=\mathsf{W}(A)$ of positive points in $\NN^m$ such that \[ \{\crit(A, \vv{u}) : (A, \vv{u})\text{ is very small}\} = \{ \crit(A,\vv{u}) : \vv{u} \in \mathsf{W}  \}\] for all $p \gg 0$, depending only on $A$.  The point is that we will need to invoke that crit is invariant under collapsing. 
  \item[$\Box$]  Use this to describe $\ideala^{[\lambda]}$ when $\lambda \in [0,1]$ and $p \gg 0$.
  \item[$\Box$] Produce an example describing $\ideala^{[\lambda]}$.  Candidates include our running example, and taking $\idealm^d$, and removing generators close to the axes.
  \item[$\Box$] A $\kk$-generic hypersurface with support $x^{\vv{a}_1}, \ldots, x^{\vv{a}_n}$ will refer to any linear combination of these monomials $g = z_1 x^{\vv{a}_1} + \cdots + z_n x^{\vv{a}_n}$, which may be thought of as an element of either $\kk[z][x]$ or $\kk(z)[x]$.  If $S$ denotes either of these rings, then Theorem 5.3/Corollary 5.7 in Frobenius Powers implies that $\tau(f^t) = \ideala^{[t]} S$.  Thus, we have the following result:  \emph{If the supporting monomials are fixed beforehand, and $p \gg 0$, then any the test ideals of any $\kk$-generic hypersurface, where $\kk$ is a field of characteristic $p$, with those supporting exponents are well-behaved and can be described explicitly}.
@@ -2866,13 +2865,12 @@ Finally, the minimality of $\mathcal{L} = \mf(\matA, \vv{u})$ implies that $\mat
    With this choice of $k$, the recession basis of $\mf(\matA,\vv{u})$ contains $\rb(\O)$, and \Cref{lem: lifting pairs} shows that this minimal face must actually be $\O$.
 \end{proof}
 
-\begin{proposition}[]
-\label{finite-set-small-crits: P}
-There exists a finite set $\mathsf{W}=\mathsf{W}(A)$ and an integer $\beta = \beta(A)$ such that the following property holds for all $p > \beta$:  
-$\crit(A, \vv{u}) \in (0,1]$ for all $\vv{u} \in \mathsf{W}$ 
 
- \item[$\Box$] Explicitly describe a finite seof positive points in $\NN^m$ such that \[ \{\crit(A, \vv{u}) : (A, \vv{u})\text{ is very small}\} = \{ \crit(A,\vv{u}) : \vv{u} \in \mathsf{W}  \}\] for all $p \gg 0$, depending only on $A$.  The point is that we will need to invoke that crit is invariant under collapsing. 
- 
+
+\begin{proposition}
+\label{finite-representatives-small-crits: P}
+There exists a finite set $\mathsf{W}=\mathsf{W}(A)$ of positive points in $\NN^m$, and an integer $\beta = \beta(A)$, such that the following property holds for all $p > \beta$:   $\crit(\matA, \vv{u}) \in (0,1]$ for all $\vv{u} \in \mathsf{W}$, and if $\lambda = \crit(\matA, \vv{v}) \in (0,1]$ for some positive point $\vv{v} \in \NN^m$, then 
+$\crit(\matA, \vv{u}) = \lambda$ for some $\vv{u} \in \mathsf{W}$.
  \end{proposition}
 
 
