--- a/aip.tex
+++ b/aip.tex
@@ -2880,7 +2880,7 @@ Finally, the minimality of $\mathcal{L} = \mf(\matA, \vv{u})$ implies that $\mat
 
 \begin{example}[Running example: critical exponents and Frobenius powers]
    Let $\kk$ be a field of positive characteristic $p$, and $\ideala = \ideal{x^5 y^5 z^2, x^3 y^4 z^8, x^4 y^3 z^5} \subseteq \kk[x,y,z]$.
-   When $p$ is sufficiently large and congruent to $11$ modulo $\num{2170560}$, the following are the critical exponents of $\ideala$ in the open unit interval:
+   When $p$ is sufficiently large and congruent to $11$ modulo $\num{2170560}$, the following are the critical exponents of $\ideala$ in the unit interval:
    \begin{center}
       \begingroup
       \setlength{\tabcolsep}{8pt} % Default value: 6pt
