--- a/aip.tex
+++ b/aip.tex
@@ -2962,6 +2962,10 @@ Finally, the minimality of $\mathcal{L} = \mf(\matA, \vv{u})$ implies that $\mat
    \caption{Frobenius powers for \Cref{ex: ft.6}}
    \label{table: main example}
 \end{table}
+\pedro[inline]{
+   For the last interval, we need to throw in the generator $x^4y^3z^3$, which comes from the point $\vv{u} = (5,4,4)$.
+   We have $\crit(\matA,\vv{u}) = \frac{40}{38}-\frac{3}{38p}$; $(\matA,\vv{u})$ is a small but not very small pair.
+}
 \end{example}
 
 
