Changes to m2 files

--- a/aip.tex
+++ b/aip.tex
@@ -2954,7 +2954,7 @@ Finally, the minimality of $\mathcal{L} = \mf(\matA, \vv{u})$ implies that $\mat
         $\frac{15}{17} - \frac1{17 p^6} \le t < \frac{17}{19}$ & $\ideal{x^3y^2z^3, x^4y^3z^2, x^4y^4z, x^2y^3z^6}$ \\
         $\frac{17}{19} \le t < \frac{16}{17} - \frac1{51 p}$ & $\ideal{x^3y^2z^4, x^3y^3z^3, x^4y^3z^2, x^4y^4z, x^2y^3z^6}$ \\
         $\frac{16}{17} - \frac1{51 p} \le t < \frac{18}{19}$ & $\ideal{x^3y^2z^4, x^4y^3z^2, x^4y^4z, x^2y^3z^7}$ \\
-        $\frac{18}{19} \le t < 1$ & \hl{$\ideal{x^3y^2z^4, x^4y^4z, x^2y^3z^7}$ WRONG} \\
+        $\frac{18}{19} \le t < 1$ & $\ideal{x^3y^2z^4, x^4y^4z, x^4y^3z^3, x^2y^3z^7}$ \\
         \bottomrule
       \end{tabular}
       \endgroup
@@ -2962,10 +2962,6 @@ Finally, the minimality of $\mathcal{L} = \mf(\matA, \vv{u})$ implies that $\mat
    \caption{Frobenius powers for \Cref{ex: ft.6}}
    \label{table: main example}
 \end{table}
-\pedro[inline]{
-   For the last interval, we need to throw in the generator $x^4y^3z^3$, which comes from the point $\vv{u} = (5,4,4)$.
-   We have $\crit(\matA,\vv{u}) = \frac{40}{38}-\frac{3}{38p}$; $(\matA,\vv{u})$ is a small but not very small pair.
-}
 \end{example}
 
 
